# dosattrib

./: .gitignore  Makefile.dist  Makefile.in  README  README.md  config.h.in  configure  configure.ac  dosattrib.c  dosattrib.man
pkgs/: Makefile.dist  Makefile.in  Makefile.port.in  build.sh.in  control.in  dosattrib.deb  dosattrib.rb.in  local.mog  pkg-descr.in  pkg-plist  pkginfo.in
pkgs/deb/DEBIAN/: control
